@@ -7,7 +7,6 @@ except ImportError: #pragma: no cover
     from decimal import Decimal
 
 import os
-from StringIO import StringIO
 
 try:
     import unittest2 as unittest
@@ -409,7 +408,7 @@ class TestTable(unittest.TestCase):
     def test_format(self):
         table = Table(self.rows, self.columns)
 
-        output = StringIO()
+        output = six.StringIO()
         table.pretty_print(output=output)
         lines = output.getvalue().split('\n')
 
@@ -419,7 +418,7 @@ class TestTable(unittest.TestCase):
     def test_format_max_rows(self):
         table = Table(self.rows, self.columns)
 
-        output = StringIO()
+        output = six.StringIO()
         table.pretty_print(max_rows=2, output=output)
         lines = output.getvalue().split('\n')
 
@@ -429,7 +428,7 @@ class TestTable(unittest.TestCase):
     def test_format_max_columns(self):
         table = Table(self.rows, self.columns)
 
-        output = StringIO()
+        output = six.StringIO()
         table.pretty_print(max_columns=2, output=output)
         lines = output.getvalue().split('\n')
 
